gap fixing done

--- a/style-2.css
+++ b/style-2.css
@@ -334,10 +334,7 @@ span.fl-txt-line-bg{
 	margin-bottom: 35px;
 }
 .vr-all-natural-img-lft {
-    padding-top: 70px;
-}
-.vr-all-natural-dsc-rgt{
-	padding-top: 30px;
+    padding-top: 45px;
 }
 .vr-all-natural-dsc{
 	padding-right: 5px;
